# conversational_ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  generate_token.py  main.py  pyproject.toml  requirements.txt  run.sh
src/conversation_ai/agents/: voice_agent.py
src/conversation_ai/config/: settings.py
src/conversation_ai/conversation/: manager.py
src/conversation_ai/llm/: gemini_llm.py
src/conversation_ai/stt/: sarvam_stt.py
src/conversation_ai/tts/: sarvam_tts.py
